fix: don't stretch profile picture

--- a/elyreacts/src/pages/styles/Profile.module.scss
+++ b/elyreacts/src/pages/styles/Profile.module.scss
@@ -91,6 +91,9 @@
             width: 100%;
 
             border-radius: 50%;
+
+            object-fit: cover;
+            object-position: center;
         }
     }
 }
